<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/layout_padding"
    tools:context=".view.fragments.HomeFragment">

    <Button
        android:id="@+id/btn_dolar"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:backgroundTint="@color/white"
        android:text="@string/dolar"
        android:textColor="@color/orange_background_color"
        android:textSize="10sp"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_euro"
        app:layout_constraintTop_toBottomOf="@+id/card_view"
        tools:ignore="SmallSp" />

    <Button
        android:id="@+id/btn_euro"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:backgroundTint="@color/white"
        android:text="@string/euro"
        android:textColor="@color/orange_background_color"
        android:textSize="10sp"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_dolar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_sterlin"
        app:layout_constraintTop_toBottomOf="@+id/card_view"
        tools:ignore="SmallSp" />

    <Button
        android:id="@+id/btn_sterlin"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/sterlin"
        android:textSize="10sp"
        android:textColor="@color/orange_background_color"
        android:backgroundTint="@color/white"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_euro"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_turk_lirasi"
        app:layout_constraintTop_toBottomOf="@+id/card_view"
        tools:ignore="SmallSp" />

    <Button
        android:id="@+id/btn_turk_lirasi"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/turk_lirasi"
        android:textSize="10sp"
        android:textColor="@color/orange_background_color"
        android:backgroundTint="@color/white"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_sterlin"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view"
        tools:ignore="SmallSp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_view_height"
        android:backgroundTint="@color/orange_background_color"
        app:cardCornerRadius="@dimen/card_view_corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:text="@string/hello"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            tools:text="@string/user_def_name"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="16dp"
            android:text="@string/user_spending"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_total_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:text="0 TL"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_turk_lirasi" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/my_button"
        android:text="@string/btn_add_text"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>